2009-10-01  Glenn Morris  <rgm@gnu.org>

	* cedet/semantic/bovine/gcc.el
	(semantic-c-reset-preprocessor-symbol-map): Fix declaration.
	(semantic-gcc-get-include-paths, semantic-gcc-setup-data): Doc fixes.

	* emacs-lisp/check-declare.el (check-declare-scan): Read the declaration
	rather than parsing it as a regexp.  This relaxes the layout
	requirements and makes errors easier to detect.
	(check-declare-verify): Check file is regular.
	(check-declare-directory): Doc fix.
	* subr.el (declare-function): Doc fix.

	* ibuffer.el (ibuffer-format-qualifier):
	* isearch.el (hi-lock-regexp-okay):
	* calc/calc.el (math-zerop):
	* mail/uce.el (rmail-msgbeg, rmail-msgend):
	* term/w32-win.el (setup-default-fontset, set-fontset-font):
	Remove unused declarations.

2009-10-01  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/semantic/wisent/javat-wy.el
	(wisent-java-tags-wy--keyword-table): Use \000 instead of literal ^@.

2009-09-30  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/srecode/expandproto.el: Fix provide statement.

2009-09-30  Eric Ludlam  <zappo@gnu.org>

	* emacs-lisp/eieio.el (boolean-p): Deleted.

2009-09-30  Sascha Wilde  <wilde@sha-bang.de>

	* cedet/ede/srecode.el: Fix provide statement.

2009-09-30  Glenn Morris  <rgm@gnu.org>

	* cedet/ede/proj.el (ede-proj-target-makefile-miscelaneous):
	* cedet/ede/proj-aux.el (ede-aux-source):
	* cedet/ede/proj-misc.el (ede-proj-target-makefile-miscelaneous)
	(ede-misc-source):
	* cedet/semantic/mru-bookmark.el (semantic-mrub-completing-read)
	(semantic-mrub-switch-tags): Fix doc typos.

	* cedet/semantic/db-global.el (data-debug-new-buffer)
	(data-debug-insert-thing): Remove unneeded declarations (one broken).
	(semanticdb-enable-gnu-global-databases): Fix prompt typo.

	* cedet/semantic/analyze/fcn.el (semantic-scope-find): Fix declaration.

	* cedet/semantic/bovine/gcc.el (semantic-gcc-setup): Replace runtime use
	of CL function `remove-if-not'.

	* emacs-lisp/authors.el (authors-ignored-files): Add "js2-mode.el".